<resources>
  <string name="app_name">Covid-19 Torres</string>
  <string name="list_boletins">Lista de boletins</string>
  <string name="tData">00/00/0000</string>
  <string name="tHora">00:00</string>
  <string name="iData">Data</string>
  <string name="tSuspeitos">0</string>
  <string name="tConfirmados">0</string>
  <string name="tDescartados">0</string>
  <string name="tMonitoramento">0</string>
  <string name="tCurados">0</string>
  <string name="tIsoDomiciliar">0</string>
  <string name="tIsoHospitalar">0</string>
  <string name="tIsoHospitalarConf">0</string>
  <string name="tMortes">0</string>
  <string name="iSuspeitos">Suspeitos</string>
  <string name="textView_suspeitos">Suspeitos</string>
  <string name="textView_confirmados">Confirmados</string>
  <string name="textView_descartados">Descartados</string>
  <string name="textView_monitoramento">Monitoramento</string>
  <string name="textView_curados">Curados</string>
  <string name="textView_suspeitos_isolamento_domiciliar">Suspeitos em isolamento domiciliar</string>
  <string name="textView_suspeitos_isolamento_hospitalar">Suspeitos em isolamento hospitalar</string>
  <string name="textView_confirmados_isolamento_hospitalar">Corfirmados em isolamento hospitalar</string>
  <string name="textView_mortes">Mortes</string>
</resources>